# ff-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/finansfatura/: __init__.py  client.py  errors.py  models.py  payload.py
tests/: test_client.py  test_payload.py
